# PenDocX

./: README.md  pendocx_config.json  pyproject.toml
data/: mission.json
pendocx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pendocx/cli/: cli.py
pendocx/core/: errors.py
pendocx/models/: models.py
pendocx/reporter/: reporters.py
reports/: PenDocX Demo_report.docx  PenDocX Demo_report.html  PenDocX Demo_report.md  PenDocX Enhanced_report.md  PenDocX Premium_report.docx  PenDocX Premium_report.html  PenDocX Premium_report.md
tests/: test_models.py
